[package]
name = "scrapbox-converter-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }

[lib]
crate-type = ["cdylib"]
