[package]
name = "scrapbox-converter-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom_locate = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
log = "0.4.6"

[dev-dependencies]
indoc = "1.0"
rstest = "0.14.0"

[lib]
crate-type = ["cdylib"]
